# shgo

./: .codeclimate.yml  .coveragerc  .coveralls.yml  .gitignore  .travis.yml  BLJ_unit_tests.py  Homology structures.ipynb  Integral homology complex structures.ipynb  LICENSE  LJ.py  Makefile  PyTables play.ipynb  README.md  README.rst  _shgo.py  _shgo_sobol.py  _tgo.py  benchmarker.py  col.py  conf.py  data_parsers.py  dev4.py  dev5.py  dev6.py  dev7.py  disimpl_compr.py  disimple_compr_funcs.py  environment.yml  figs_out.py  figs_out2.py  figs_out3.py  figs_out4.py  figures_out.ipynb  figures_out_ursum.ipynb  function_cache.py  go_bench.py  go_bench_f_min.py  go_bench_lc.py  homology_structures.py  index.rst  (+20 more)
.github/workflows/: run-tests.yml
BLJ_unit_tests/: BLJ100_1.3.txt  BLJ94_1.15.txt  BLJ98_1.3.txt  BLJ99_1.25.txt
doc/: README.rst
docs/: README.md  README.rst  READOTHER.md  _config.yml  cmd
docs/_layout/: default.html
go_funcs/: go_benchmark.py  go_funcs_D.py  go_funcs_E.py  go_funcs_L.py  go_funcs_T.py
go_funcs_lc/: __init__.py  go_benchmark.py  go_funcs_lc.py
htmlcov/: _shgo_py.html  _tgo_py.html  index.html  shgo_tests_py.html  status.json
results/: Analyse json.ipynb  handle_data.py  results.json  results300.json  results300_succ.json  results5000.json  simplex growth with n  sin_out.py
results/.ipynb_checkpoints/: Analyse json-checkpoint.ipynb
shgo/: __init__.py  _shgo.py  hypert  pytest.ini  shgo  shgo_tests.py  sobol_seq.py  triangulation.py
shgo/_shgo_lib/: _complex.py  _field.py  _misc.py  _vertex.py  _vertex_group.py
(+5 files in other folders)
